--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,8 +1,17 @@
-@import './colors.scss', './flex.scss', './layouts.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import './colors.scss', './flex.scss', './layouts.scss', './styles.scss';
 
 *{
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+a{
+    color: inherit;
+    text-decoration: none;
 }
 body{
     margin: 0;
+    font-size: 14px;
+    background: $black;
+    color: #fff;
 }
