--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -7,6 +7,9 @@
 .__inline-block{
     display: inline-block;
 }
+.__center{
+    text-align: center;
+}
 
 .__p-0{
     padding: 1em;
@@ -76,37 +79,42 @@
 .__ml-4{
     margin-left: 4em;
 }
-.__mr-2{
-    margin-right: 2em;
+.__mr-4{
+    margin-right: 4em;
 }
-.__mt-2{
-    margin-top: 2em;
+.__mt-4{
+    margin-top: 4em;
 }
-.__mb-2{
-    margin-bottom: 2em;
+.__mb-4{
+    margin-bottom: 4em;
+}
+
+.__container{
+    width: 90%;
+    margin: auto;
 }
 
 @media (max-width: 1200px){
     .__m-0-on-large{
-        @extend .__m-0;
+        margin: 0;
     }
     .__block-on-large{
-        @extend .__block;
+        display: block;;
     }
 }
 @media (max-width: 900px){
     .__m-0-on-mediam{
-        @extend .__m-0;
+        margin: 0;
     }
     .__block-on-mediam{
-        @extend .__block;
+        display: block;;
     }
 }
 @media (max-width: 760px){
     .__m-0-on-small{
-        @extend .__m-0;
+        margin: 0;
     }
     .__block-on-small{
-        @extend .__block;
+        display: block;;
     }
 }
