--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,9 @@
     width: 100%;
     position: sticky;
     top: 0;
+    .__brand-logo > img{
+        width: 7.142em;
+    }
     .__navlinks{
         list-style-type: none;
         >li{
