--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -16,10 +16,12 @@
 .__italic{
     font-style: italic;
 }
+.__background{
+    background-size: 100% 100%;
+}
 .__viewport{
     min-height: 100vh;
-    @extend .__row;
-    background-size: 100% 100%;
+    @extend .__row, .__background;
 }
 .__viewport-title{
     font-size: 3.71em;
@@ -77,73 +79,88 @@
 .__m-4{
     margin: 4em;
 }
+.__m-a{
+    margin: auto;
+}
 
 .__ml-1{
-    margin-left: 1em;
+    margin-left: 1em !important;
 }
 .__mr-1{
-    margin-right: 1em;
+    margin-right: 1em !important;
 }
 .__mt-1{
-    margin-top: 1em;
+    margin-top: 1em !important;
 }
 .__mb-1{
-    margin-bottom: 1em;
+    margin-bottom: 1em !important;
 }
 
 .__ml-2{
-    margin-left: 2em;
+    margin-left: 2em !important;
 }
 .__mr-2{
-    margin-right: 2em;
+    margin-right: 2em !important;
 }
 .__mt-2{
-    margin-top: 2em;
+    margin-top: 2em !important;
 }
 .__mb-2{
-    margin-bottom: 2em;
+    margin-bottom: 2em !important;
 }
 
 .__ml-3{
-    margin-left: 3em;
+    margin-left: 3em !important;
 }
 .__mr-3{
-    margin-right: 3em;
+    margin-right: 3em !important;
 }
 .__mt-3{
-    margin-top: 3em;
+    margin-top: 3em !important;
 }
 .__mb-3{
-    margin-bottom: 3em;
+    margin-bottom: 3em !important;
 }
 .__ml-3{
-    margin-left: 3em;
+    margin-left: 3em !important;
 }
 
 .__ml-4{
-    margin-left: 4em;
+    margin-left: 4em !important;
 }
 .__mr-4{
-    margin-right: 4em;
+    margin-right: 4em !important;
 }
 .__mt-4{
-    margin-top: 4em;
+    margin-top: 4em !important;
 }
 .__mb-4{
-    margin-bottom: 4em;
+    margin-bottom: 4em !important;
+}
+
+.__ml-a{
+    margin-left: auto !important;
+}
+.__mr-a{
+    margin-right: auto !important;
+}
+.__mt-a{
+    margin-top: auto !important;
+}
+.__mb-a{
+    margin-bottom: auto !important;
 }
 
 .__container{
     width: 86%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     padding-left: 0 !important;
     padding-right: 0 !important;
-    &.__style-2{
-        width: 70%;
-    }
 }
-
+.__container-2{
+    width: 70%;
+    margin: auto;
+}
 @media (max-width: 1200px){
     .__m-0-on-large{
         margin: 0;
