resolve-small-css-bugs-from-homepage

--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -162,6 +162,9 @@
     margin: auto;
 }
 @media (max-width: 1200px){
+    .__container-2{
+        width: 86%;
+    }
     .__m-0-on-large{
         margin: 0;
     }
