--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,8 +3,9 @@
     padding: 0.2em 0;
     background: rgba($color: $black, $alpha: 0.3);
     width: 100%;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     .__brand-logo > img{
         width: 7.142em;
     }
