resolve-background-image-issues

--- a/src/pages/SponserContestPage/SponserContestPage.scss
+++ b/src/pages/SponserContestPage/SponserContestPage.scss
@@ -1,11 +1,11 @@
 @import '../../scss/colors.scss';
 
-.__HomePage{
+.__SponserContestPage{
     .__viewport-1{
         background-image: url('../../assets/HomePageViewPortImage.jpg');
     }
     .__viewport-subtitle{
-        max-width: 28em;
+        max-width: 31.5em;
     }
     .__main{
         width: 50%;
