--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @import '../../scss/colors.scss';
+
 .__Header{
     padding: 0.2em 0;
     background: rgba($color: $black, $alpha: 0.3);
@@ -16,6 +17,9 @@
             text-transform: uppercase;
             &:last-child{
                 margin-right: 0;
+            }
+            a:hover, a.active{
+                color: $primary;
             }
         }
     }
