--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -17,7 +17,14 @@
     font-style: italic;
 }
 .__background{
-    background-size: 100% 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    .__to-right{
+        background-position: right;
+    }
+    .__to-left{
+        background-position: left;
+    }
 }
 .__viewport{
     min-height: 100vh;
@@ -27,8 +34,9 @@
     font-size: 3.71em;
     letter-spacing: -0.5px;
     text-shadow: -3px 3px rgba(0,0,0,.16);
-    padding: 0 0.58em;
+    padding: 0 0.5em;
     border-radius: 4px;
+    font-weight: 600;
     sup, sub{
         font-size: 0.462em;
     }
