--- a/src/components/Header2/Header2.scss
+++ b/src/components/Header2/Header2.scss
@@ -1,20 +1,21 @@
 @import '../../scss/colors.scss';
 
-.__Header{
+.__Header2{
     background: $black;
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 2;
+    padding: 0.19em 0;
+    background-color: #17181a;
     .__brand-logo > img{
-        width: 7.142em;
+        width: 9.46em;
     }
     .__navlinks{
         list-style-type: none;
-        margin: 0.66em 0;
         >li{
-            margin: 0 1.5em;
+            margin: 0 1.3em;
             text-transform: uppercase;
             &:last-child{
                 margin-right: 0;
@@ -23,5 +24,5 @@
                 color: $primary;
             }
         }
-    }
+    }   
 }
