__design-the-PowerPlaySponser-page

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -61,4 +61,8 @@
     .__background-5-main{
         max-width: 37em;
     }
+    .__powerplay-large-icon{
+        right: 0;
+        top: 8em
+    }
 }
