--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,7 +16,8 @@ body{
     color: #fff;
 }
 .__h2, .__h3, .__h4, .__h5{
-    line-height: 1.4em;
+    line-height: 1.2em;
+    font-weight: 500;
 }
 .__h2{
     font-size: 2.85em;
@@ -47,7 +48,6 @@ body{
 }
 .__mediam{
     font-size: 16px;
-    line-height: 1.8em;
 }
 .__small{
     font-size: 0.94em;
