--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,19 +5,20 @@
     text-transform: uppercase;
 }
 .__btn{
-    padding: 0.315em 1.5em;
+    padding: 0.55em 0.7em;
     @extend .__primary;
     border-radius: 4px;
     cursor: pointer;
-    border: 1px solid $primary;
     text-transform: uppercase;
     font-weight: 500;
     display: inline-block;
     color: #fff;
     text-align: center;
+    min-width: 9em;
+    border: 1px solid $primary;
     &.__style-2{
         background: transparent;
-        color: $primary;
+        border-color: currentColor;
     }
     &.__style-3{
         box-shadow: 0 3px 27px 0 #fb6e00;
