removed-small-erros-on-home-page

--- a/src/pages/PowerPlaySponsorsPage/PowerPlaySponsorsPage.scss
+++ b/src/pages/PowerPlaySponsorsPage/PowerPlaySponsorsPage.scss
@@ -2,7 +2,7 @@
 
 .__PowerPlaySponsorsPage{
     .__viewport-1{
-        background-image: url('../../assets/stadium.jpg');
+        background-image: url('../../assets/stadium@2x.jpg');
     }
     .__viewport-subtitle{
         max-width: 34em;
