--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -55,3 +55,9 @@ body{
 .__light-black-color{
     color: $lightBlack;
 }
+.__default-font-size{
+    font-size: 14px;
+}
+.__defail-font-weight{
+    font-weight: 400;
+}
