--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,16 +5,15 @@
     text-transform: uppercase;
 }
 .__btn{
-    padding: 0.55em 0.7em;
+    padding: 0.55em 1.75em;
     @extend .__primary;
-    border-radius: 4px;
+    border-radius: 6px;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 500;
     display: inline-block;
     color: #fff;
     text-align: center;
-    min-width: 9em;
     border: 1px solid $primary;
     &.__style-2{
         background: transparent;
@@ -31,6 +30,9 @@
 }
 .__dark-white-color{
     color: #f2f2f2;
+    &.__shade-2{
+        color: rgba($color: #f2f2f2, $alpha: 0.5);
+    }
 }
 .__white-color{
     color: #fff !important;
@@ -84,15 +86,33 @@
     background: $primary;
     border-radius: 2px;
 }
-.__input-field{
-    font-size: inherit;
+.__text-field, .__input-field{
     font-family: inherit;
     outline: none;
     border: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.__text-field{
+    background: rgba(216, 216, 216, 0.6);
+    color: #f2f2f2;
+    padding: 0.675em 1em;
+    border-radius: 6px;
+    border: solid 1px #979797;
+    width: 100%;
+    &::placeholder{
+        color: #f2f2f2;
+        font-style: italic;
+    }
+}
+.__input-field{
+    padding: 0.76em 2em;
     background-color: #35363a;
     font-size: 15px;
     border-radius: 2em;
-    padding: 0.76em 2em;
     color: #fff;
 }
 .__outline-badge{
