design-the-resposive-viewport-and-navbar-of-powerplay-screen

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,4 +28,62 @@
         padding: 0.329em;
         min-width: 122px;
     }
+    @media (max-width: 1200px) {
+        padding: 1em 0;
+        .__menu-icon{
+            background: transparent;
+            outline: none;
+            border: none;
+            padding: 0;
+            >span{
+                width: 24px;
+                height: 4px;
+                background: $primary;
+                border-radius: 2px;
+                display: block;
+                &:nth-child(2){
+                    margin: 2px 0;
+                }
+            }
+            &:focus ~ .__navlinks{
+                max-height: 1000px;
+            }
+        }
+        .__navlinks{
+            position: absolute;
+            display: block;
+            width: 100%;
+            left: 0;
+            top: 100%;
+            text-align: center;
+            background-color: #17181a;
+            margin: 0;
+            max-height: 0;
+            overflow: hidden;
+            transition: linear 0.3s max-height;
+            li{
+                margin: 1em 0;
+                font-size: 1.15em;
+                &:first-child{
+                    margin-top: 4em;
+                }
+                &:last-child{
+                    margin-bottom: 4em;
+                }
+                .__header-btn{
+                    background: transparent;
+                    border: none;
+                    margin: 0;
+                }
+                &:not(:last-child)::after{
+                    content: '';
+                    border-bottom: 1px solid rgba(242, 242, 242, 0.2);
+                    display: block;
+                    width: 5em;
+                    margin: 1.5em auto;
+                }
+            }
+            
+        }
+    }
 }
