--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-@import './colors.scss', './flex.scss', './layouts.scss', './styles.scss';
+@import './colors.scss', './flex.scss', './layouts.scss', './styles.scss', './responsive.scss';
 
 *{
     box-sizing: border-box;
