--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,7 @@ body{
     font-size: 14px;
     background: $black;
     color: #fff;
+    background-color: #202124;
 }
 .__h2, .__h3, .__h4, .__h5{
     line-height: 1.2em;
