--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -20,7 +20,7 @@
         width: 90%;
     }
     .__m-0-on-large{
-        margin: 0;
+        margin: 0 !important;
     }
     .__block-on-large{
         display: block;;
