--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -149,3 +149,15 @@ input::-webkit-inner-spin-button {
 .__absolute{
     position: absolute;
 }
+
+.__hide-scrollbar{
+    &::-webkit-scrollbar {
+        width: 0;
+    }
+    // &::-webkit-scrollbar-track {
+    //     background: #f1f1f1;
+    // }
+    // &::-webkit-scrollbar-thumb {
+    //     background: #888;
+    // }
+}
