--- a/src/pages/PowerCenter/table.scss
+++ b/src/pages/PowerCenter/table.scss
@@ -73,6 +73,15 @@
 .__table-wrapper{
     @media (max-width: 1200px) {
         margin: 0 0 1.6em 0 !important;
+        .__resize{
+            font-size: 20px;
+            img{
+                width: 1em;
+            }
+            .__primary-color{
+                font-size: 30px;
+            }
+        }
         .__main-grid{
             grid-template-columns: 1fr;
             grid-gap: 1em;
