--- a/src/pages/PowerCenter/table.scss
+++ b/src/pages/PowerCenter/table.scss
@@ -31,6 +31,9 @@
         display: grid;
         grid-template-columns:  repeat(4, 1fr);
         grid-gap: 1em;
+        &.__interactive-grid{
+            grid-template-columns:  repeat(5, 1fr);
+        }
     }
     overflow: auto;
     white-space: nowrap;
