design-the-player-card

--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -121,10 +121,10 @@
     margin-bottom: 0.4em;
 }
 .__mr-s{
-    margin-right: 0.4em;
+    margin-right: 0.4em !important;
 }
 .__ml-s{
-    margin-left: 0.4em;
+    margin-left: 0.4em !important;
 }
 .__ml-1{
     margin-left: 1em !important;
