--- a/src/components/Header2/Header2.scss
+++ b/src/components/Header2/Header2.scss
@@ -16,12 +16,14 @@
         list-style-type: none;
         >li{
             margin: 0 1.3em;
-            text-transform: uppercase;
             &:last-child{
-                margin-right: 0;
+                margin: 0;
             }
             a:hover, a.active{
                 color: $primary;
+            }
+            .__btn{
+                padding: 0.627em 2.36em;
             }
         }
     }   
