--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap');
 @import './colors.scss', './flex.scss', './layouts.scss', './styles.scss', './responsive.scss';
 
 *{
@@ -51,7 +52,7 @@ body{
     font-size: 16px;
 }
 .__small{
-    font-size: 0.94em;
+    font-size: 15px;
 }
 .__light-black-color{
     color: $lightBlack;
