--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,10 +11,15 @@
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 500;
-    display: inline-block;
     color: #fff;
     text-align: center;
     border: 1px solid $primary;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    svg{
+        margin-right: 0.4em;
+    }
     &.__style-2{
         background: transparent;
         border-color: currentColor;
@@ -84,7 +89,7 @@
 }
 .__badge{
     background: linear-gradient(to right, #fb6e00 11%, #fa3800 94%);
-    padding: 0.15em 0.43em;
+    padding: 0.05em 0.46em;
     border-radius: 8px;
 }
 .__small-border{
@@ -122,6 +127,45 @@ input::-webkit-inner-spin-button {
     border-radius: 2em;
     color: #fff;
 }
+.__checkbox{
+    padding: 0;
+    margin: 0;
+    position: relative;
+    width: 16px;
+    height: 16px;
+    visibility: hidden;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    &::after, &::before{
+        content: '';
+        position: absolute;
+        visibility: visible;
+    }
+    &::after{
+        width: 14px;
+        height: 14px;
+        border-radius: 3px;
+        border: 1px solid #f2f2f2;
+    }
+    &::before{
+        min-width: 10px;
+        min-height: 10px;
+        border-radius: 1px;
+        transform: scale(0);
+        transition: linear 0.1s transform;
+        background: $primary;
+    }
+    &:checked{
+        &::after{
+            border-color: $primary;
+        }
+        &::before{
+            transform: scale(1);
+        }
+    }
+}
 .__outline-badge{
     padding: 0.532em 0.69em;
     border: 2px solid;
@@ -156,10 +200,4 @@ input::-webkit-inner-spin-button {
     &::-webkit-scrollbar {
         width: 0;
     }
-    // &::-webkit-scrollbar-track {
-    //     background: #f1f1f1;
-    // }
-    // &::-webkit-scrollbar-thumb {
-    //     background: #888;
-    // }
 }
