--- a/src/components/Contest/Contest.scss
+++ b/src/components/Contest/Contest.scss
@@ -1,6 +1,7 @@
 @import '../../scss/colors.scss';
 
 .__contest{
+    margin: 1.6em 0 1.6em 1.6em;
     .__main{
         box-shadow: 0 4px 8px 0 rgba(4, 4, 4, 0.4);
         border-radius: 5px;
@@ -12,9 +13,25 @@
         }
         .__border{
             border-left: solid 1px #111;
-            height: 100%;
             height: 160px;
             margin: auto;
+        }
+    }
+    .__contest-btn{
+        padding: 3px 1em;
+        border-radius: 1em;
+        border: 1.5px solid;
+        text-align: center;
+        &:first-child{
+            color: $primary;
+        }
+        &:nth-child(2){
+            background: linear-gradient(to left, rgba(242, 242, 242, 0.8), #f2f2f2 0%);
+            color: #202124;
+        }
+        &:nth-child(3){
+            background: linear-gradient(to left, #fa3800, #fb6e00 0%);
+            border-color: transparent;
         }
     }
     .__board{
@@ -50,9 +67,12 @@
             }
         }
     }
+    .__contest-footer{
+        border-top: 1px solid #000;
+        padding: 0.5em;
+    }
     .__vs{
         -webkit-text-stroke: 1px #f2f2f2;
-        margin: 0.7em;
         text-stroke: 1px #f2f2f2;
         color: transparent;
         font-family: Teko;
