--- a/src/pages/PowerBetContest/PowerBetContest.scss
+++ b/src/pages/PowerBetContest/PowerBetContest.scss
@@ -28,6 +28,7 @@
         border: solid 2px #000000;
         background-color: #17181a;
         border-radius: 11px;
+        max-height: 600px;
     }
     .__winner-prize{
         font-size: 28px;
